--- a/resources/gtk/main.glade
+++ b/resources/gtk/main.glade
@@ -115,6 +115,7 @@
                   <object class="GtkEntry" id="entry_keyword">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="placeholder_text" translatable="yes">Search</property>
                   </object>
                   <packing>
                     <property name="expand">True</property>
@@ -429,6 +430,7 @@
                   <object class="GtkLabel" id="label_game_version">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
+                    <property name="tooltip_text" translatable="yes">Version</property>
                     <property name="label" translatable="yes">0.1</property>
                   </object>
                   <packing>
