--- a/resources/gtk/settings.glade
+++ b/resources/gtk/settings.glade
@@ -41,7 +41,7 @@
       </row>
     </data>
   </object>
-  <object class="GtkWindow">
+  <object class="GtkWindow" id="window_settings">
     <property name="can_focus">False</property>
     <property name="window_position">center</property>
     <child>
@@ -75,7 +75,6 @@
                     <property name="column_spacing">6</property>
                     <child>
                       <object class="GtkLabel">
-                        <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="halign">start</property>
                         <property name="label" translatable="yes">Language:</property>
@@ -99,7 +98,6 @@
                     </child>
                     <child>
                       <object class="GtkComboBox">
-                        <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="hexpand">True</property>
                       </object>
@@ -109,7 +107,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkEntry">
+                      <object class="GtkEntry" id="entry_instead">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="hexpand">True</property>
@@ -127,7 +125,7 @@
                         <property name="can_focus">False</property>
                         <property name="layout_style">expand</property>
                         <child>
-                          <object class="GtkButton">
+                          <object class="GtkButton" id="button_instead_browse">
                             <property name="label" translatable="yes">Browse...</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
@@ -140,7 +138,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkToggleButton">
+                          <object class="GtkToggleButton" id="togglebutton_instead_builtin">
                             <property name="label" translatable="yes">Use built-in</property>
                             <property name="visible">True</property>
                             <property name="sensitive">False</property>
@@ -154,7 +152,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton">
+                          <object class="GtkButton" id="button_instead_detect">
                             <property name="label" translatable="yes">Detect</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
@@ -167,7 +165,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton">
+                          <object class="GtkButton" id="button_instead_check">
                             <property name="label" translatable="yes">Check</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
@@ -186,7 +184,7 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkLabel" id="label_interpreter_inf">
+                      <object class="GtkLabel" id="label_instead_inf">
                         <property name="can_focus">False</property>
                         <property name="halign">start</property>
                         <property name="label" translatable="yes">INSTEAD 3.2.1 has found!</property>
@@ -217,7 +215,7 @@
                         <property name="can_focus">False</property>
                         <property name="spacing">6</property>
                         <child>
-                          <object class="GtkButton">
+                          <object class="GtkButton" id="button_cache_clear">
                             <property name="label" translatable="yes">Clear</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
@@ -232,7 +230,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkLabel">
+                          <object class="GtkLabel" id="label_cache_inf">
                             <property name="can_focus">False</property>
                             <property name="label" translatable="yes">Cache has been clean</property>
                             <attributes>
@@ -249,6 +247,31 @@
                       <packing>
                         <property name="left_attach">1</property>
                         <property name="top_attach">4</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="halign">start</property>
+                        <property name="label" translatable="yes">Config path:</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">0</property>
+                        <property name="top_attach">5</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkLabel" id="label_config_path">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="halign">start</property>
+                        <property name="label" translatable="yes">/</property>
+                        <property name="selectable">True</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">1</property>
+                        <property name="top_attach">5</property>
                       </packing>
                     </child>
                     <child>
@@ -467,7 +490,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkLabel">
+                          <object class="GtkLabel" id="label_version">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
                             <property name="halign">start</property>
