--- a/resources/gtk/main.glade
+++ b/resources/gtk/main.glade
@@ -40,11 +40,11 @@
       <column type="gchararray"/>
       <!-- column-name Version -->
       <column type="gchararray"/>
-      <!-- column-name Size (human) -->
+      <!-- column-name Size -->
       <column type="gchararray"/>
       <!-- column-name Font_weight -->
       <column type="gint"/>
-      <!-- column-name Size -->
+      <!-- column-name Size1 -->
       <column type="gint"/>
     </columns>
   </object>
